--- a/Julius/templates/index.html
+++ b/Julius/templates/index.html
@@ -131,13 +131,13 @@
                 <div class="contact__container bd-grid">
                     <div class="contact__info">
                         <h3 class="contact__subtitle">EMAIL</h3>
-                        <span class="contact__text">info.mail.com</span>
+                        <span class="contact__text">info@merchperch.store</span>
 
                         <h3 class="contact__subtitle">PHONE</h3>
-                        <span class="contact__text">+20 999-999</span>
+                        <span class="contact__text">+233 50 015 9892</span>
 
-                        <h3 class="contact__subtitle">ADRESS</h3>
-                        <span class="contact__text">My contry</span>
+                        <h3 class="contact__subtitle">ADRRESS</h3>
+                        <span class="contact__text">Teshie Camp2 School, <br> Woleiatse Odamety Sowah St. <br>Accra-GHANA</span>
                     </div>
 
                     <form action="" class="contact__form">
@@ -158,7 +158,7 @@
         <footer class="footer section">
             <div class="footer__container bd-grid">
                 <div class="footer__data">
-                    <h2 class="footer__title">JHON DOE</h2>
+                    <h2 class="footer__title">Boakye N.A Julius </h2>
                     <p class="footer__text">I'm Jhon Doe and this is my personal website</p>
                 </div>
 
